--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
